Reporting: FilterRegistry und Leistungsdatenmatrix